# ossi

./: Cargo.toml  LICENSE  Makefile  README.md  build.sh  drive.img  grub.cfg  linker.ld  run.sh  x86.json
.cargo/: config.toml
iso/boot/grub/: grub.cfg
scripts/: build.bat  build.sh  run.sh
src/: ata.rs  boot.asm  bootloader.asm  console.rs  events.rs  execution.rs  fs.rs  grub.rs  heap.rs  interrupts.rs  io.rs  keyboard.rs  lib.rs  load_kernel.asm  load_kernel.asm.old  main.rs  paging.rs  pic.rs  process.rs  syscall.rs  timer.rs  userspace.rs  vga_console.rs
src/bootloader (unused (for now))/: bootloader.asm  defs.h  load_kernel.asm  load_kernel.c  load_kernel.h  protected_mode.asm
