[package]
name = "ossi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"] # generate .a files

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.2.6"
spin = "0.9.4"
bitflags = "2.0.0-rc.1"
bitfield = "*"

